--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,7 +3,7 @@
   position: relative;
   padding: 40px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(168, 20, 20, 0.1);
   overflow: hidden;
   text-align: center;
 }
@@ -40,8 +40,9 @@
 }
 
 .contact-heading {
-  font-size: 2em;
+  font-size: 3em;
   margin-bottom: 20px;
+  color: #f2f543;
   animation: fadeAnimation 2s ease-in-out infinite;
 }
 
@@ -69,7 +70,9 @@
 }
 
 .form-label {
-  font-size: 1.2em;
+  font-size: 20px;
+  font-weight: 500;
+  color: #f2f543;
   margin-bottom: 5px;
 }
 
