--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -1,4 +1,34 @@
-.resume {
-  width: 1000px;
-  height: 1300px;
+.resume__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.resume__title {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+  font-size: 2em; /* Adjust the font size as desired */
+  color: #f5a30a; /* Adjust the color to your preferred color */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add a text shadow for a cool effect */
+}
+.resume__section {
+  text-align: center;
+}
+
+.resume__image-container {
+  display: flex;
+  justify-content: center;
+}
+
+.resume__image {
+  max-width: 100%;
+  max-height: 100%;
+}
+#resume {
+  margin-top: 150px;
+}
+#resume:hover {
+  background-color: black;
+  cursor: pointer;
+  opacity: 0.8;
 }
