--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -42,7 +42,7 @@
 .contact-heading {
   font-size: 3em;
   margin-bottom: 20px;
-  color: #f2f543;
+  color: #070700;
   animation: fadeAnimation 2s ease-in-out infinite;
 }
 
