--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -23,19 +23,46 @@
 .intro-text {
   font-size: 1.2em;
 }
-
-.intro-vortex {
-  width: 300px;
-  height: 300px;
-  background: radial-gradient(circle, #4c60ff 0%, rgba(76, 96, 255, 0) 70%);
-  animation: spinVortex 5s linear infinite;
+.about__image {
+  width: 400px;
+  height: 400px;
+  top: 80px;
+  left: 104px;
+  border-radius: 250px;
+  margin-top: 45px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+  transition: transform 1s;
+}
+.about__image:hover {
+  cursor: pointer;
+}
+.spinning {
+  animation: spin 1s linear;
 }
 
-@keyframes spinVortex {
+@keyframes spin {
   0% {
-    transform: rotate(0);
+    transform: rotate(0deg) scale(1);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.2);
   }
   100% {
-    transform: rotate(360deg);
+    transform: rotate(360deg) scale(1);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .about__image {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .about__image {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
   }
 }
