--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -11,7 +11,7 @@
   animation: jump 1.5s ease-in-out infinite;
   animation-delay: calc(0.1s * var(--index));
   font-size: 4em;
-  background: linear-gradient(75deg, #d1352a, #1a0404);
+  background: linear-gradient(75deg, #6ae94b, #f55050);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
