--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -8,7 +8,7 @@
   justify-content: center;
   padding-bottom: 50px;
   font-size: 2em; /* Adjust the font size as desired */
-  color: #f5a30a; /* Adjust the color to your preferred color */
+  color: #0804f3; /* Adjust the color to your preferred color */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add a text shadow for a cool effect */
 }
 .resume__section {
