--- a/src/components/Achievements/Achievements.css
+++ b/src/components/Achievements/Achievements.css
@@ -8,8 +8,8 @@
   justify-content: center;
   padding-bottom: 40px;
   font-size: 2em;
-  color: #f5a30a;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  color: #0804f3;
+  text-shadow: 2px 2px 4px rgba(11, 7, 243, 0.5);
 }
 
 .certifications {
