--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -17,7 +17,7 @@
   transform: translate(-50%, -50%);
   width: 200%;
   height: 200%;
-  background-color: rgba(72, 0, 97, 0.2);
+  background-color: rgba(32, 221, 111, 0.2);
   border-radius: 50%;
   opacity: 0.5;
   z-index: -1;
@@ -72,7 +72,7 @@
 .form-label {
   font-size: 20px;
   font-weight: 500;
-  color: #f2f543;
+  color: #2b07f8;
   margin-bottom: 5px;
 }
 
