--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -103,3 +103,27 @@
 .form-button:hover {
   background-color: #0056b3;
 }
+.contact-section {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.527);
+  z-index: 9999;
+}
+
+.overlay-message {
+  color: black;
+  font-weight: bold;
+}
+.overlay__paragraph {
+  row-gap: 20px;
+}
