--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -13,14 +13,14 @@
   text-align: center;
   margin: 0;
 }
-@media screen and (min-width: 850px) and (max-width: 1280px) {
+@media screen and (min-width: 630px) and (max-width: 1280px) {
   .welcome {
     font-size: 3rem;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 850px) {
+@media screen and (min-width: 320px) and (max-width: 630px) {
   .welcome {
-    font-size: 2rem;
+    font-size: 30px;
   }
 }
