--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -25,3 +25,9 @@
   justify-content: space-around;
   gap: 20px;
 }
+.project-thumbnail {
+  background-size: cover;
+  background-position: center;
+  width: 300px;
+  height: 200px;
+}
